--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html {
 
 body {
   width: 100%;
-  min-height: 100vh;
+  height: auto;
   margin: 0;
   background: #f0f0f0;
   font-family: 'Poppins';
