--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,9 +8,19 @@ ul {
     padding: 0;
 }
 
+/* Styling each individual product */
 li {
-    margin: auto;
-    padding: 2em;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 400px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Real subtle shadow effect */
+    transition: background-color 0.3s;
+}
+
+li:hover {
+    background-color: rgb(223, 223, 223);
 }
 
 .product-container {
@@ -18,6 +28,12 @@ li {
     flex-direction: column; 
     align-items: center;
     text-align: center;   
+}
+
+.product-container p {
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
 }
 
 img {
