--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,4 +2,9 @@ $screen-large: 1024px;
 $screen-medium: 768px;
 $screen-small: 320px;
 
-$primary-color: ;
+$background-color: #30343F;
+$primary-text-color: #FAFAFF;
+
+$primary-color: #E4D9FF;
+$secondary-color: #273469;
+$tertiary-color: #1E2749;
