--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,9 +2,9 @@ $screen-large: 1024px;
 $screen-medium: 768px;
 $screen-small: 320px;
 
-$background-color: #30343F;
-$primary-text-color: #FAFAFF;
+$background-color: #F2F2F2;
+$primary-text-color: #0D0D0D;
 
-$primary-color: #E4D9FF;
-$secondary-color: #273469;
-$tertiary-color: #1E2749;
+$primary-color: #030A8C;
+$secondary-color: #B3E7F2;
+$tertiary-color: #F2AA52;
