--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -26,6 +26,48 @@ li:hover {
 }
 
 /*****************/
+/* CATEGORY TABS */
+/*****************/
+
+.category-tab-wrapper {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.category-tabs {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    flex-wrap: nowrap;
+}
+
+.category-tabs button {
+    margin: 5px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: $primary-color;
+    color: #fff;
+    font-size: 1em;
+    cursor: pointer;
+    transition: $background-color 0.3s;
+    text-transform: uppercase;
+}
+
+.category-tabs button.active {
+    background-color: $secondary-color;
+    color: $primary-text-color;
+}
+
+.category-tabs button:hover {
+    background-color: lighten($primary-color, 10%);
+}
+
+.category-tabs button.active:hover {
+    background-color: darken($secondary-color, 10%);
+}
+
+/*****************/
 /* MEDIA QUERIES */
 /*****************/
 
@@ -57,6 +99,15 @@ li:hover {
     .product-container p {
         font-size: 0.875em;
     }
+
+    .category-tab-wrapper {
+        padding-left: 20px;
+    }
+
+    .category-tabs {
+        justify-content: flex-start;
+        padding-left: 20px;
+    }
 }
 
 
@@ -83,38 +134,3 @@ a {
     color: inherit;
 }
 
-/*****************/
-/* CATEGORY TABS */
-/*****************/
-
-.category-tabs {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-}
-
-.category-tabs button {
-    margin: 0 10px;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: $primary-color;
-    color: #fff;
-    font-size: 1em;
-    cursor: pointer;
-    transition: $background-color 0.3s;
-    text-transform: uppercase;
-}
-
-.category-tabs button.active {
-    background-color: $secondary-color;
-    color: $primary-text-color;
-}
-
-.category-tabs button:hover {
-    background-color: lighten($primary-color, 10%);
-}
-
-.category-tabs button.active:hover {
-    background-color: darken($secondary-color, 10%);
-}
